--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <!-- fellows wanted -->
       <section class="fellows">
         <div class="d-flex align-items-center">
-          <p><h3 id="#fellows">Fellows wanted dead</h3>(or alive if you want to eat them later)</p>
+          <h3 id="#fellows">Fellows wanted dead</h3><p>(or alive if you want to eat them later)</p>
         </div>
         <br>
 
@@ -167,9 +167,10 @@
               <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
             </div>
             <img class="ml-3" src="https://via.placeholder.com/140x140" alt="Generic placeholder image">
-          </article>
+          </div>
+        </article>
           <div class="d-flex justify-content-center">
-            <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">
+            <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false">
               Contact us
             </button>   
           </div>
@@ -248,7 +249,7 @@
               <div class="media-body">
                 <p class="card-text">My precioooooouuuuuuussssss! Hrk Hrk, We want our precioooooouuuuuuussssss</p>
               </div>
-              <img class="ml-3" src="https://pm1.narvii.com/6257/79935489d52ecbd15697d709f4eb73db984214e8_128.jpg" alt="" class="rounded-circle">
+              <img class="ml-3" src="https://pm1.narvii.com/6257/79935489d52ecbd15697d709f4eb73db984214e8_128.jpg" alt="">
             </div>
           </div>
         </div>
@@ -265,7 +266,7 @@
             <h3 class="mt-0" id="army">Join Modor Army, we need you !</h3>
             <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.Nunc posuere consectetur odio sit amet accumsan. Suspendisse eu nisl ut nisl gravida condimentum. Aenean quis viverra nunc. Mauris efficitur tincidunt neque, id commodo metus pulvinar vitae.</p>
             <div class="d-flex justify-content-center">
-              <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">
+              <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false">
                 More info on SauronRulesThemAll.com
               </button>
             </div>
